fix: a11y contrast

--- a/src/assets/scss/components/_components.booking.scss
+++ b/src/assets/scss/components/_components.booking.scss
@@ -10,7 +10,7 @@
   display: block;
 
   @include breakpoint(small) {
-    background-color: var(--color-brand2);
+    background-color: var(--color-brand1);
     padding: calc(6 / 12 * 1rem);
     display: inline-flex;
     flex-direction: row;
@@ -33,6 +33,7 @@
     padding-left: calc(24 / 16 * 1rem);
     margin-bottom: 0;
     color: var(--color-white);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -41,12 +42,13 @@
 
   padding: calc(14 / 16 * 1rem) calc(24 / 16 * 1rem);
   border-radius: 30px;
-  background-color: var(--color-brand2);
+  background-color: var(--color-brand1);
   color: var(--color-white);
   text-align: center;
   text-decoration: none;
   line-height: 1;
   cursor: pointer;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
   transition: background-color 0.2s ease-in-out;
 
@@ -58,6 +60,7 @@
   @include breakpoint(small) {
     background-color: var(--color-white);
     color: var(--color-gray3);
+    text-shadow: none;
 
     &:hover,
     &:focus {
